<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="itemPrayer"
            type="aslan.aslanov.prayerapp.model.prayerCurrent.Data" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_2dp"
        android:background="@drawable/bg_view"
        android:paddingHorizontal="@dimen/margin_10dp">

        <TextView
            android:id="@+id/text_view_date_gregorian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(itemPrayer.date.gregorian.date)}"
            android:textAppearance="@style/TextColumnHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_view_prayer_time" />

        <TextView
            android:id="@+id/text_view_date_hijri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(itemPrayer.date.hijri.date)}"
            android:textAppearance="@style/TextColumnHeader"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_date_gregorian"
            tools:text="@string/text_view_prayer_time" />

        <TextView
            android:id="@+id/text_view_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/text_view_country"
            android:textAlignment="center"
            android:textAppearance="@style/TextColumnHeader"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_date_hijri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/text_view_date_gregorian"
            tools:text="@{itemPrayer.meta.timezone}" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gregorian"
            android:textAppearance="@style/TextColumnSubHeader"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_date_gregorian"
            app:layout_constraintStart_toEndOf="@+id/text_view_date_gregorian"
            app:layout_constraintTop_toTopOf="@+id/text_view_date_gregorian" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hijri"
            android:textAppearance="@style/TextColumnSubHeader"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_date_hijri"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/text_view_date_gregorian" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>